snapshots/aws_nlb_targets_instance/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-06514449415bfa4f1",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0a001de0c2ffb4f50"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-0285d59609e48b560",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0694387c4fc4ab17f"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0196fa00d6c21bec8",
     "NetworkAclId": "acl-0fc14264d5bee6323",
     "SubnetId": "subnet-0d4b70413c37702d7"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0fc14264d5bee6323",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_instance_target"
    }
   ],
   "VpcId": "vpc-0a001de0c2ffb4f50"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0ebc1d9c0cbf70858",
     "NetworkAclId": "acl-070788220b80c7557",
     "SubnetId": "subnet-03a25b235f73f0b8b"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-070788220b80c7557",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_instance_nlb"
    }
   ],
   "VpcId": "vpc-0a001de0c2ffb4f50"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0c53e805c183753dc",
     "NetworkAclId": "acl-02c1a3264b41f9746",
     "SubnetId": "subnet-0c98698a4af121197"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-02c1a3264b41f9746",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "jump_general"
    }
   ],
   "VpcId": "vpc-0694387c4fc4ab17f"
  }
 ]
}
